src/objects/ReceiptDocument__c.object
<CustomObject>
    <description>Receipt object</description>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Document_Date__c</fullName>
        <description>Date of reciept/purchase</description>
        <label>Document Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eligible_Receipt_Amount_Comment__c</fullName>
        <description>Comment to explain why a reciept is only partially eligible.</description>
        <inlineHelpText>Comment to explain why a reciept is only partially eligible.</inlineHelpText>
        <label>Eligible Receipt Amount Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Eligible_Receipt_Amount__c</fullName>
        <description>Partial amount of a reciept that is eligible.  Must be more than $0 and less than the full receipt amount.</description>
        <inlineHelpText>Partial amount of a reciept that is eligible.  Must be more than $0 and less than the full receipt amount.</inlineHelpText>
        <label>Eligible Receipt Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Eligible_Receipt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eligible Receipt?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eligible?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <description>Identifying invoice number</description>
        <label>Invoice #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <label>Item</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Loan__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Loan</label>
        <referenceTo>Loan__c</referenceTo>
        <relationshipLabel>Receipts &amp; Documents</relationshipLabel>
        <relationshipName>LV_Documents</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Receipts &amp; Documents</relationshipLabel>
        <relationshipName>LV_Documents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Receipt_Date__c</fullName>
        <description>Date of reciept/purchase</description>
        <label>Document Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Receipt_ID__c</fullName>
        <displayFormat>R-{0}</displayFormat>
        <label>Receipt ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Use_of_Proceeds__c</fullName>
        <label>Use of Proceeds</label>
        <picklist>
            <picklistValues>
                <fullName>Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mitigation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Machinery &amp; Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Furniture &amp; Fixtures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicles</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <description>Vendor/location of purchase for item on receipt.</description>
        <label>Vendor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Receipt &amp; Document</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Receipt/Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Receipts &amp; Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>